fix: skills carousel z-index fixed

--- a/src/sections/Skills/SkillsCarousel/SkillsCarousel.module.scss
+++ b/src/sections/Skills/SkillsCarousel/SkillsCarousel.module.scss
@@ -2,7 +2,8 @@
 
 .carousel {
   display: grid;
-
+  z-index: 0;
+  
   :global {
     .swiper {
       max-width: 100%;
